force-app/main/default/objects/Mentorship__c/Mentorship__c.object-meta.xml
<CustomObject>
    <description>Junction object for mentor-mentee relationships</description>
    <label>Mentorship</label>
    <nameField>
        <displayFormat>MEN-{00000}</displayFormat>
        <label>Mentorship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mentorships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>