force-app/main/default/objects/Mentorship__c/fields/Focus_Areas__c.field-meta.xml
<CustomField>
    <fullName>Focus_Areas__c</fullName>
    <label>Focus Areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Career Guidance</fullName>
            </value>
            <value>
                <fullName>Academic Support</fullName>
            </value>
            <value>
                <fullName>Leadership Development</fullName>
            </value>
            <value>
                <fullName>Industry Insights</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>Personal Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>