force-app/main/default/objects/Mentorship__c/fields/Meeting_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Frequency__c</fullName>
    <label>Meeting Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-weekly</fullName>
                <default>true</default>
                <label>Bi-weekly</label>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>As Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>