force-app/main/default/objects/Mentorship__c/fields/Mentee__c.field-meta.xml
<CustomField>
    <fullName>Mentee__c</fullName>
    <label>Mentee</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Mentorships</relationshipLabel>
    <relationshipName>Mentorships</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>