force-app/main/default/objects/Mentorship__c/fields/Mentor__c.field-meta.xml
<CustomField>
    <fullName>Mentor__c</fullName>
    <label>Mentor</label>
    <referenceTo>Alumni__c</referenceTo>
    <relationshipLabel>Mentorships as Mentor</relationshipLabel>
    <relationshipName>Mentorships_as_Mentor</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>