force-app/main/default/objects/Mentorship__c/fields/Success_Rating__c.field-meta.xml
<CustomField>
    <fullName>Success_Rating__c</fullName>
    <label>Success Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>